# ooc-core

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/ooc/api/: main.py
src/ooc/api/routes/: ooc_routes.py
src/ooc/cli/: main.py
src/ooc/config/: logging_config.py  settings.py
src/ooc/core/: defense_system.py  ego.py  false_self.py  growth_event.py  history_manager.py  internal_object.py  internal_object_map.py  relation_manager.py  state_manager.py  the_self.py  true_self.py
src/ooc/scripts/: simulate_life.py
src/ooc/simulation/: life_simulation.py
tests/: test_api.py  test_ego.py  test_the_self.py
